--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ gwf_hub/overview/__pycache__/
 gwf_hub/accounts/__pycache__/
 gwf_hub/albacorizer/__pycache__/
 gwf_hub/auto_answer_generator/__pycache__/
+gwf_hub/diagExtractor/__pycache__/
 */__pycache__/*
