--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@ gwf_hub/accounts/__pycache__/*.pyc
 gwf_hub/albacorizer/__pycache__/*.pyc
 gwf_hub/auto_answer_generator/__pycache__/*.pyc
 gwf_hub/gwf_hub/__pycache__/
+gwf_hub/overview/__pycache__/
+gwf_hub/accounts/__pycache__/
+gwf_hub/albacorizer/__pycache__/
 gwf_hub/auto_answer_generator/__pycache__/
 gwf_hub/json_parser/__pycache__/
 gwf_hub/validator/__pycache__/
+gwf_hub/diagExtractor/__pycache__/
 */__pycache__/*
+
