updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ gwf_hub/json_parser/__pycache__/
 gwf_hub/validator/__pycache__/
 gwf_hub/diagExtractor/__pycache__/
 gwf_hub/paramount_task_extractor/__pycache__/
+gwf_hub/payload_builder/__pycache__/
 */__pycache__/*
 
